# weekly-review-pulse

./: .dockerignore  .gitignore  Dockerfile  Improvement.md  ProblemStatement.md  README.md  api.py  config.example.yaml  google_mcp_servers.py  pulse.db  pulse_ui_prototype.html  requirements.txt  run_pulse.py  run_server.py  startup.sh
.github/workflows/: weekly_pulse.yml
MCP_Server/: README.md  google_mcp_servers.py  requirements.txt
docs/: architecture.md  deploymentPlan.md  edgeCases.md  evaluations.md  implementationPlan.md
docs/phases/phase-0-foundations/: edge-cases.md  evaluations.md
phases/phase0-foundations/: Dockerfile  docker-compose.yml  products.yaml  pyproject.toml
phases/phase0-foundations/.github/workflows/: ci.yml
phases/phase0-foundations/agent/: __main__.py  config.py  helpers.py  logger.py  storage.py
phases/phase0-foundations/agent/reasoning/: quote_validator.py  synthesizer.py
phases/phase0-foundations/pulse.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
phases/phase0-foundations/tests/: test_orchestrator.py  test_smoke.py
phases/phase1-ingestion-storage/ingestion/: app_store_fetcher.py  cleaner.py  pii_scrubber.py  play_store_scraper.py
phases/phase1-ingestion-storage/storage/: db.py
phases/phase2-reasoning/reasoning/: clusterer.py  embedder.py  quote_validator.py  synthesizer.py
phases/phase3-mcp-delivery/delivery/: mcp_client.py  renderer.py
phases/phase4-idempotency/orchestrator/: audit_logger.py  state_manager.py
pulse.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+3 files in other folders)
