[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pulse"
version = "0.1.0"
description = "Weekly Product Review Pulse"
authors = [{ name = "Product Team" }]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "sqlite-vec>=0.1.0",
    "jinja2>=3.1.3",
    "structlog>=24.1.0",
    "typer>=0.12.3",
    "pyyaml>=6.0.1",
    "langchain-groq>=0.1.0",
    "mcp>=1.0.0",
    "tzdata>=2024.1",
    "schedule>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
]

[project.scripts]
pulse = "agent.__main__:app"

[tool.setuptools.packages.find]
include = ["agent*"]

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true
